# PacMan-especialidad

./: LICENSE  README.md
PacMan/PacMan/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  map2.txt  vcpkg.json
PacMan/PacMan/FrameworkCore/: CMakeLists.txt  ColisionSystem.cpp  ColisionSystem.h  ColliderComponent.cpp  ColliderComponent.h  GraphicsComponent.cpp  GraphicsComponent.h  IComponent.h  IScene.h  ISystem.h  InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h  MovementComponent.cpp  MovementComponent.h  Node.cpp  Node.h  RenderSystem.cpp  RenderSystem.h  SceneManager.cpp  SceneManager.h  Singleton.h  TileCollisionSystem.cpp  TileCollisionSystem.h  TileMapComponent.cpp  TileMapComponent.h  TransformComponent.cpp  TransformComponent.h  Utilitys.h
PacMan/PacMan/MODS/: CMakeLists.txt  IMod.h  ModManager.cpp  ModManager.h
PacMan/PacMan/MODS/SpeedBoost/: CMakeLists.txt  SpeedboostMod.cpp  SpeedboostMod.h
PacMan/PacMan/PacMan/: CMakeLists.txt  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  Ghost.cpp  Ghost.h  GhostAIComponent.cpp  GhostAIComponent.h  GhostAISystem.cpp  GhostAISystem.h  Main.cpp  MapLoader.cpp  MapLoader.h  MenuScene.cpp  MenuScene.h  PacMan.cpp  PacMan.h  PacmanCollisionSystem.cpp  PacmanCollisionSystem.h  PauseScene.cpp  PauseScene.h  QuickSave.cpp  QuickSave.h  TileMap.cpp  TileMap.h
